
SUBDIRS = src

EXTRA_DIST = \
	examples/sed1520/18f452.lkr examples/sed1520/bitmaps.asm \
	examples/sed1520/glcd_test.asm \
	examples/sed1520/globalvars.inc \
	examples/sed1520/lcd100X32.asm examples/sed1520/lcd100X32.inc \
	examples/sed1520/Makefile \
	examples/sed1520/portdef.inc  examples/sed1520/processor.inc \
	examples/sed1520/sed1520.asm  examples/sed1520/sed1520.inc \
	utils/custom.png utils/fontimage.png utils/gpsim1.png \
	utils/konqueror16X16.png utils/konqueror3.png \
	utils/konqueror.png utils/pngtopic.c utils/README \
	doc/mgls10032a.pdf doc/sed1520.pdf
