

EXTRA_DIST = \
	examples/sed1520/18f452.lkr examples/sed1520/bitmaps.asm \
	examples/sed1520/glcd_test.asm \
	examples/sed1520/globalvars.inc \
	examples/sed1520/lcd100X32.asm examples/sed1520/lcd100X32.inc \
	examples/sed1520/Makefile \
	examples/sed1520/portdef.inc  examples/sed1520/processor.inc \
	examples/sed1520/sed1520.asm  examples/sed1520/sed1520.inc \
	examples/ssd0323/bitmaps.asm examples/ssd0323/18f452.lkr \
	examples/ssd0323/globalvars.inc examples/ssd0323/ssd0323.inc \
	examples/ssd0323/osram128x64.asm examples/ssd0323/osram128x64.inc \
	examples/ssd0323/Makefile examples/ssd0323/glcd_test.asm \
	examples/ssd0323/portdef.inc examples/ssd0323/processor.inc \
	examples/ssd0323/ssd0323.asm \
	utils/custom.png utils/fontimage.png utils/gpsim1.png \
	utils/konqueror16X16.png utils/konqueror3.png \
	utils/konqueror.png utils/pngtopic.c utils/README \
	doc/mgls10032a.pdf doc/sed1520.pdf \
	src/glcd_100X32_sed1520.h  src/osram.h src/ssd0323.h \
	src/glcd.h src/sed1520.h

