# Makefile for the LCD module
# 

EXTRA_DIST = lcd.gif caps.pl lcd.xpm lcdfont.h lcdfont.inc README \
	hd44780.h  lcdfont.h  lcd.h \
	t.gif examples/Makefile examples/lcd.inc \
	examples/lcd.asm examples/screen.inc examples/screen.asm \
	examples/lcd_mod20x4.stc examples/lcd_mod.stc examples/README


SUBDIRS = 

