# Makefile for the LCD module
# 

EXTRA_DIST = lcd.gif caps.pl lcd.xpm lcdfont.h lcdfont.inc README \
	hd44780.h  lcdfont.h  lcd.h raw_lcd.h t.gif examples/lcdmemtest.c \
	examples/lcdmemtest.stc examples/lcd_917.asm examples/lcd_916.asm \
	examples/Makefile examples/lcd.inc examples/lcd_mod.asm\
	examples/lcd.asm examples/screen.inc examples/screen.asm \
	examples/lcd_mod20x4.stc examples/lcd_mod.stc examples/README 


SUBDIRS = 

