SUBDIRS =  modules projects 12bit 14bit 16bit 

EXTRA_DIST =  \
	scripts/client2.cc \
	scripts/client3.cc \
	scripts/client_interface.h \
	scripts/testgensquares.py \
	scripts/testsocket.py \
	scripts/testgensquares_init.py \
	scripts/client.cc \
	scripts/README \
	scripts/client_interface.cc \
	scripts/gensquares.asm \
	scripts/makefile

MOSTLYCLEANFILES = *.hex *.cod *.lst *~
CLEANFILES = *.hex *.cod *.lst *~
DISTCLEANFILES = *.hex *.cod *.lst *~
MAINTAINERCLEANFILES = *.hex *.cod *.lst *~
