## Process this file with automake to produce Makefile.in

INCLUDES = @X_CFLAGS@

SUBDIRS = graphic_lcd  lcd  ds1307

EXTRA_DIST = rs232-gen/Makefile rs232-gen/example/Makefile \
	rs232-gen/example/example.asm rs232-gen/example/example.stc \
	rs232-gen/example/README rs232-gen/README rs232-gen/rs232-gen.c
