## Process this file with automake to produce Makefile.in

INCLUDES = @X_CFLAGS@

lib_LTLIBRARIES = libgpsim_modules.la

libgpsim_modules_la_SOURCES = \
	gpsim_modules.cc \
	binary_indicator.cc binary_indicator.h \
	resistor.cc resistor.h \
	usart.cc usart.h 


libgpsim_modules_la_LDFLAGS =  @X_LDFLAGS@

